Поправил после ревью 2 этап